[gd_scene load_steps=7 format=3 uid="uid://c8xqy4n5pqr7w"]

[ext_resource type="Theme" uid="uid://buaicsh0r3xyc" path="res://themes/main_theme.tres" id="1_theme"]
[ext_resource type="Script" path="res://scenes/task_panel_v2.gd" id="2_script"]
[ext_resource type="Script" path="res://scripts/ui/action_button.gd" id="3_action_button"]
[ext_resource type="PackedScene" uid="uid://d2uw2sgfwjw0a" path="res://scenes/task_card.tscn" id="4_task_card"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.12, 0.12, 0.15, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.6, 0.6, 0.65, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_color = Color(0.4, 0.4, 0.45, 0.3)
shadow_size = 4
shadow_offset = Vector2(0, 2)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_escape_theme"]
bg_color = Color(0.12, 0.12, 0.15, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.9, 0.75, 0.3, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6
shadow_color = Color(0.9, 0.75, 0.3, 0.2)
shadow_size = 6

[node name="TaskPanelV2" type="PanelContainer"]
custom_minimum_size = Vector2(360, 0)
theme = ExtResource("1_theme")
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")
script = ExtResource("2_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TabBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="JobTab" type="Button" parent="MarginContainer/VBoxContainer/TabBar"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 22
text = "ðŸ’¼ JOB"

[node name="EscapeTab" type="Button" parent="MarginContainer/VBoxContainer/TabBar"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 22
text = "ðŸš€ ESCAPE"

[node name="JobContent" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TaskCard" parent="MarginContainer/VBoxContainer/JobContent" instance=ExtResource("4_task_card")]
layout_mode = 2

[node name="EscapeContent" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 12

[node name="HeaderRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer/EscapeContent"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TaskTitle" type="Label" parent="MarginContainer/VBoxContainer/EscapeContent/HeaderRow"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 28
text = "Side Project"

[node name="MetadataRow" type="HBoxContainer" parent="MarginContainer/VBoxContainer/EscapeContent"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="DueLabel" type="Label" parent="MarginContainer/VBoxContainer/EscapeContent/MetadataRow"]
layout_mode = 2
text = "Goal: $5K"

[node name="ProgressSection" type="VBoxContainer" parent="MarginContainer/VBoxContainer/EscapeContent"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/EscapeContent/ProgressSection"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
max_value = 100.0
show_percentage = false

[node name="ProgressPercent" type="Label" parent="MarginContainer/VBoxContainer/EscapeContent/ProgressSection"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "0%"
horizontal_alignment = 1

[node name="ActionButtons" type="HBoxContainer" parent="MarginContainer/VBoxContainer/EscapeContent"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="HustleButton" type="Button" parent="MarginContainer/VBoxContainer/EscapeContent/ActionButtons"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 22
text = "HUSTLE"
script = ExtResource("3_action_button")
